force-app/main/default/objects/C_Response__c/C_Response__c.object-meta.xml
<CustomObject>
    <description>Response option for a question, or reusable library template</description>
    <label>Response</label>
    <nameField>
        <label>Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>