force-app/main/default/objects/C_Response__c/fields/C_Locks_Question__c.field-meta.xml
<CustomField>
    <fullName>C_Locks_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locks Question</label>
    <type>Checkbox</type>
</CustomField>