force-app/main/default/objects/C_Response__c/fields/C_Points__c.field-meta.xml
<CustomField>
    <fullName>C_Points__c</fullName>
    <label>Points</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>