force-app/main/default/objects/C_Response__c/fields/C_Question__c.field-meta.xml
<CustomField>
    <fullName>C_Question__c</fullName>
    <label>Question</label>
    <referenceTo>C_Question__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>C_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>