force-app/main/default/objects/C_Response__c/fields/C_Requires_Details__c.field-meta.xml
<CustomField>
    <fullName>C_Requires_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Details</label>
    <type>Checkbox</type>
</CustomField>