force-app/main/default/objects/C_Response__c/fields/C_Response_Text__c.field-meta.xml
<CustomField>
    <fullName>C_Response_Text__c</fullName>
    <label>Response Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>