force-app/main/default/objects/C_Response__c/fields/C_Search_Name__c.field-meta.xml
<CustomField>
    <fullName>C_Search_Name__c</fullName>
    <label>Search Name</label>
    <type>TextArea</type>
</CustomField>