force-app/main/default/objects/C_Response__c/fields/C_Source_Response__c.field-meta.xml
<CustomField>
    <fullName>C_Source_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Response (Library)</label>
    <referenceTo>C_Response__c</referenceTo>
    <relationshipLabel>Form Responses</relationshipLabel>
    <relationshipName>C_Form_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>