force-app/main/default/objects/C_Response__c/recordTypes/Form.recordType-meta.xml
<RecordType>
    <fullName>Form</fullName>
    <active>true</active>
    <description>Response option placed within a form question</description>
    <label>Form</label>
</RecordType>