force-app/main/default/objects/C_Response__c/recordTypes/Library.recordType-meta.xml
<RecordType>
    <fullName>Library</fullName>
    <active>true</active>
    <description>Reusable response template in the library</description>
    <label>Library</label>
</RecordType>