force-app/main/default/objects/C_Response__c/listViews/All_Responses.listView-meta.xml
<ListView>
    <fullName>All_Responses</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>C_Question__c</columns>
    <columns>C_Response_Text__c</columns>
    <columns>C_Points__c</columns>
    <columns>C_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Responses</label>
</ListView>